# engram-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_CN.md  install.ps1  install.sh  mcp-config.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MCP.md  SETUP.md
mcp/: README.md  package-lock.json  package.json  server.json
mcp/src/: index.ts
src/: ai.rs  api.rs  consolidate.rs  consolidate_tests.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  prompts.rs  proxy.rs  proxy_tests.rs  recall.rs  recall_tests.rs  safety.rs  safety_tests.rs  scoring.rs  thresholds.rs  util.rs
src/api/: admin.rs  api_tests.rs  facts.rs  memory.rs  mod.rs  recall.rs  recall_handlers.rs  resume.rs  topiary_api.rs
src/consolidate/: audit.rs  cluster.rs  distill.rs  facts.rs  merge.rs  mod.rs  sandbox.rs  summary.rs  triage.rs  triage_tests.rs
src/db/: facts.rs  facts_tests.rs  fts.rs  fts_tests.rs  memory.rs  memory_tests.rs  mod.rs  proxy.rs  vec.rs  vec_tests.rs
src/proxy/: extract.rs  mod.rs  parse.rs  proxy_tests.rs  stats.rs  window.rs
src/topiary/: cluster.rs  mod.rs  naming.rs  worker.rs
tests/: ai_tests.rs  api_tests.rs  audit_tests.rs  cluster_tests.rs  code_noise_tests.rs  consolidate_tests.rs  db_meta_tests.rs  error_tests.rs  facts_tests.rs  fts_tests.rs  integration.sh  memory_tests.rs  proxy_tests.rs  recall_tests.rs  sandbox_tests.rs  scoring_tests.rs  topiary_tests.rs  triage_tests.rs  util_tests.rs  vec_tests.rs
web/: app.js  index.html  style.css
